Fixed navar, added js collapse, fixed monkey image kind of

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,5 +1,9 @@
 #dat_monkey_doe {
-  width: 100px;
-  height: 75px;
+  width: 75px;
+  height: auto;
 
+}
+
+#navigation {
+ padding-bottom: 20px;
 }
